# livelink

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.jules/: sentinel.md
examples/callbacks/: main.py
examples/docker_voice/: main.py
examples/escalation_handler/: main.py  supervisor.py
examples/guardrails/: main.py
examples/incident_response/: agent.py  main.py  run_standalone.py  run_supervised.py  tools.py
examples/minimal_voice/: main.py
examples/multi_agent/: main.py
examples/pizza_order/: main.py
examples/supervised_agent/: main.py  supervisor.py
examples/support_bot/: main.py
src/livelink/: __init__.py  _ui.py  agent.py  audio.py  delegation.py  events.py  exceptions.py  governance.py  guardrails.py  handoff.py  hooks.py  memory.py  registry.py  relay.py  retry.py  runner.py  serve.py  session.py  session_config.py  signals.py  streaming.py  supervise.py  tools.py  transport.py
src/livelink/adapters/: __init__.py  base.py  gemini.py  openai.py
src/livelink/integrations/: langchain.py
src/livelink/supervision/: __init__.py  cancellation.py  events.py  hitl.py  runtime_events.py  supervise.py  terminal_ui.py
src/relaykit/: __init__.py  _ui.py  agent.py  audio.py  capabilities.py  delegation.py  events.py  exceptions.py  governance.py  handoff.py  hooks.py  memory.py  registry.py  relay.py  retry.py  runner.py  serve.py  session.py  session_config.py  streaming.py  supervise.py  tools.py  transport.py  types.py
src/relaykit/adapters/: __init__.py  base.py  gemini.py  openai.py
src/relaykit/integrations/: __init__.py  langchain.py
src/relaykit/supervision/: __init__.py  adapter.py  cancellation.py  hitl.py  supervise.py  terminal_ui.py
