[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livelink"
version = "0.1.0"
description = "Thin adapter layer for live/realtime AI model APIs (Gemini Live, OpenAI Realtime)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
openai = ["openai>=1.50.0"]
langchain = ["langgraph>=0.3.0,<1.0"]
serve = ["websockets>=12.0"]
all = ["google-genai>=1.0.0", "openai>=1.50.0", "langgraph>=0.3.0,<1.0", "websockets>=12.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "websockets>=12.0",
]
pydub = ["pydub>=0.25.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/livelink"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration: tests requiring live API credentials (skipped in CI)",
]
